@@ -10,16 +10,16 @@
 
 package org.junit.jupiter.api.extension;
 
-import static java.util.Collections.unmodifiableList;
+import static org.apiguardian.api.API.Status.DEPRECATED;
 import static org.apiguardian.api.API.Status.EXPERIMENTAL;
 import static org.apiguardian.api.API.Status.INTERNAL;
+import static org.apiguardian.api.API.Status.MAINTAINED;
 import static org.apiguardian.api.API.Status.STABLE;
 
 import java.lang.reflect.AnnotatedElement;
 import java.lang.reflect.Method;
 import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -28,6 +28,7 @@ import java.util.Set;
 import java.util.function.Function;
 
 import org.apiguardian.api.API;
+import org.jspecify.annotations.Nullable;
 import org.junit.jupiter.api.TestInstance.Lifecycle;
 import org.junit.jupiter.api.function.ThrowingConsumer;
 import org.junit.jupiter.api.parallel.ExecutionMode;
@@ -155,7 +156,7 @@ public interface ExtensionContext {
 	 * @since 5.12.1
 	 * @see org.junit.platform.commons.support.AnnotationSupport#findAnnotation(Class, Class, List)
 	 */
-	@API(status = EXPERIMENTAL, since = "5.12.1")
+	@API(status = MAINTAINED, since = "5.13.3")
 	List<Class<?>> getEnclosingTestClasses();
 
 	/**
@@ -345,7 +346,7 @@ public interface ExtensionContext {
 	 * @see org.junit.platform.engine.ConfigurationParameters
 	 */
 	@API(status = STABLE, since = "5.10")
-	<T> Optional<T> getConfigurationParameter(String key, Function<String, T> transformer);
+	<T> Optional<T> getConfigurationParameter(String key, Function<? super String, ? extends @Nullable T> transformer);
 
 	/**
 	 * Publish a map of key-value pairs to be consumed by an
@@ -411,7 +412,7 @@ public interface ExtensionContext {
 	 * @since 5.12
 	 * @see org.junit.platform.engine.EngineExecutionListener#fileEntryPublished
 	 */
-	@API(status = EXPERIMENTAL, since = "5.12")
+	@API(status = MAINTAINED, since = "5.13.3")
 	void publishFile(String name, MediaType mediaType, ThrowingConsumer<Path> action);
 
 	/**
@@ -419,7 +420,7 @@ public interface ExtensionContext {
 	 * and attach it to the current test or container.
 	 *
 	 * <p>The directory will be resolved and created in the report output directory
-	 * prior to invoking the supplied action.
+	 * prior to invoking the supplied action, if it doesn't already exist.
 	 *
 	 * @param name the name of the directory to be attached; never {@code null}
 	 * or blank and must not contain any path separators
@@ -427,7 +428,7 @@ public interface ExtensionContext {
 	 * @since 5.12
 	 * @see org.junit.platform.engine.EngineExecutionListener#fileEntryPublished
 	 */
-	@API(status = EXPERIMENTAL, since = "5.12")
+	@API(status = MAINTAINED, since = "5.13.3")
 	void publishDirectory(String name, ThrowingConsumer<Path> action);
 
 	/**
@@ -463,7 +464,7 @@ public interface ExtensionContext {
 	 * @see StoreScope
 	 * @see #getStore(Namespace)
 	 */
-	@API(status = EXPERIMENTAL, since = "5.13")
+	@API(status = EXPERIMENTAL, since = "6.0")
 	Store getStore(StoreScope scope, Namespace namespace);
 
 	/**
@@ -506,7 +507,7 @@ public interface ExtensionContext {
 		 * @deprecated Please extend {@code AutoCloseable} directly.
 		 */
 		@Deprecated
-		@API(status = STABLE, since = "5.1")
+		@API(status = DEPRECATED, since = "5.13")
 		interface CloseableResource {
 
 			/**
@@ -534,6 +535,7 @@ public interface ExtensionContext {
 		 * @see #get(Object, Class)
 		 * @see #getOrDefault(Object, Class, Object)
 		 */
+		@Nullable
 		Object get(Object key);
 
 		/**
@@ -552,7 +554,7 @@ public interface ExtensionContext {
 		 * @see #get(Object)
 		 * @see #getOrDefault(Object, Class, Object)
 		 */
-		<V> V get(Object key, Class<V> requiredType);
+		<V> @Nullable V get(Object key, Class<V> requiredType);
 
 		/**
 		 * Get the value of the specified required type that is stored under
@@ -569,7 +571,8 @@ public interface ExtensionContext {
 		 * @param requiredType the required type of the value; never {@code null}
 		 * @param defaultValue the default value
 		 * @param <V> the value type
-		 * @return the value; potentially {@code null}
+		 * @return the value; potentially {@code null} if {@code defaultValue}
+		 * is {@code null}
 		 * @since 5.5
 		 * @see #get(Object, Class)
 		 */
@@ -613,7 +616,7 @@ public interface ExtensionContext {
 		 * @see AutoCloseable
 		 */
 		@API(status = STABLE, since = "5.1")
-		default <V> V getOrComputeIfAbsent(Class<V> type) {
+		default <V> @Nullable V getOrComputeIfAbsent(Class<V> type) {
 			return getOrComputeIfAbsent(type, ReflectionSupport::newInstance, type);
 		}
 
@@ -647,7 +650,8 @@ public interface ExtensionContext {
 		 * @see CloseableResource
 		 * @see AutoCloseable
 		 */
-		<K, V> Object getOrComputeIfAbsent(K key, Function<K, V> defaultCreator);
+		<K, V extends @Nullable Object> @Nullable Object getOrComputeIfAbsent(K key,
+				Function<? super K, ? extends V> defaultCreator);
 
 		/**
 		 * Get the value of the specified required type that is stored under the
@@ -678,7 +682,8 @@ public interface ExtensionContext {
 		 * @see CloseableResource
 		 * @see AutoCloseable
 		 */
-		<K, V> V getOrComputeIfAbsent(K key, Function<K, V> defaultCreator, Class<V> requiredType);
+		<K, V extends @Nullable Object> @Nullable V getOrComputeIfAbsent(K key,
+				Function<? super K, ? extends V> defaultCreator, Class<V> requiredType);
 
 		/**
 		 * Store a {@code value} for later retrieval under the supplied {@code key}.
@@ -699,7 +704,7 @@ public interface ExtensionContext {
 		 * @see CloseableResource
 		 * @see AutoCloseable
 		 */
-		void put(Object key, Object value);
+		void put(Object key, @Nullable Object value);
 
 		/**
 		 * Remove the value that was previously stored under the supplied {@code key}.
@@ -716,6 +721,7 @@ public interface ExtensionContext {
 		 * for the specified key
 		 * @see #remove(Object, Class)
 		 */
+		@Nullable
 		Object remove(Object key);
 
 		/**
@@ -733,7 +739,7 @@ public interface ExtensionContext {
 		 * for the specified key
 		 * @see #remove(Object)
 		 */
-		<V> V remove(Object key, Class<V> requiredType);
+		<V> @Nullable V remove(Object key, Class<V> requiredType);
 
 	}
 
@@ -764,13 +770,13 @@ public interface ExtensionContext {
 		public static Namespace create(Object... parts) {
 			Preconditions.notEmpty(parts, "parts array must not be null or empty");
 			Preconditions.containsNoNullElements(parts, "individual parts must not be null");
-			return new Namespace(new ArrayList<>(Arrays.asList(parts)));
+			return new Namespace(List.of(parts));
 		}
 
 		private final List<Object> parts;
 
 		private Namespace(List<Object> parts) {
-			this.parts = parts;
+			this.parts = List.copyOf(parts);
 		}
 
 		@Override
@@ -809,7 +815,7 @@ public interface ExtensionContext {
 
 		@API(status = INTERNAL, since = "5.13")
 		public List<Object> getParts() {
-			return unmodifiableList(parts);
+			return parts;
 		}
 	}
 
@@ -820,7 +826,7 @@ public interface ExtensionContext {
 	 * @since 5.13
 	 * @see #getStore(StoreScope, Namespace)
 	 */
-	@API(status = EXPERIMENTAL, since = "5.13")
+	@API(status = EXPERIMENTAL, since = "6.0")
 	enum StoreScope {
 
 		/**
